--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@codesdowork/monorepo-private",
+    "name": "monorepo-private",
     "version": "0.0.0",
     "description": "A private monorepo with many projects to speed up development.",
     "keywords": [
@@ -32,6 +32,7 @@
         "check": "pnpm run format:check && pnpm run lint && pnpm run test && pnpm run build"
     },
     "devDependencies": {
+        "@codesdowork/nx-containers": "^0.5.0",
         "@nx/workspace": "16.2.2",
         "nx": "16.2.2",
         "prettier": "^2.8.8"
