--- a/package.json
+++ b/package.json
@@ -33,8 +33,38 @@
     },
     "devDependencies": {
         "@codesdowork/nx-containers": "^0.5.0",
+        "@nx/esbuild": "16.2.2",
+        "@nx/eslint-plugin": "16.2.2",
+        "@nx/jest": "16.2.2",
+        "@nx/js": "16.2.2",
+        "@nx/linter": "16.2.2",
+        "@nx/node": "16.2.2",
         "@nx/workspace": "16.2.2",
+        "@types/jest": "^29.4.0",
+        "@types/node": "~18.7.1",
+        "@typescript-eslint/eslint-plugin": "^5.58.0",
+        "@typescript-eslint/parser": "^5.58.0",
+        "esbuild": "^0.17.17",
+        "eslint": "~8.15.0",
+        "eslint-config-prettier": "8.1.0",
+        "jest": "^29.4.1",
+        "jest-environment-node": "^29.4.1",
         "nx": "16.2.2",
-        "prettier": "^2.8.8"
+        "pino-pretty": "^10.0.0",
+        "prettier": "^2.8.8",
+        "ts-jest": "^29.1.0",
+        "ts-node": "10.9.1",
+        "typescript": "~5.0.2"
+    },
+    "dependencies": {
+        "@fastify/websocket": "^8.1.0",
+        "@trpc/server": "^10.29.1",
+        "axios": "^1.0.0",
+        "fastify": "^4.17.0",
+        "moment": "^2.29.4",
+        "pino": "^8.14.1",
+        "trpc-openapi": "^1.2.0",
+        "tslib": "^2.3.0",
+        "zod": "^3.21.4"
     }
 }
