--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,10 @@
                             {
                                 "sourceTag": "shared",
                                 "onlyDependOnLibsWithTags": ["shared"]
+                            },
+                            {
+                                "sourceTag": "server/backup-service",
+                                "onlyDependOnLibsWithTags": ["shared", "server/backup-service"]
                             }
                         ]
                     }
