--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@typescript-eslint/eslint-plugin": "^5.58.0",
         "@typescript-eslint/parser": "^5.58.0",
         "esbuild": "^0.17.17",
+        "eslint-plugin-prettier": "^4.2.1",
         "eslint": "~8.15.0",
         "eslint-config-prettier": "8.1.0",
         "jest": "^29.4.1",
