--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
         "@typescript-eslint/eslint-plugin": "^5.58.0",
         "@typescript-eslint/parser": "^5.58.0",
         "esbuild": "^0.17.17",
-        "eslint-plugin-prettier": "^4.2.1",
         "eslint": "~8.15.0",
         "eslint-config-prettier": "8.1.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "jest": "^29.4.1",
         "jest-environment-node": "^29.4.1",
         "nx": "16.2.2",
@@ -59,13 +59,19 @@
     },
     "dependencies": {
         "@fastify/websocket": "^8.1.0",
+        "@mermaid-js/mermaid-mindmap": "^9.3.0",
         "@trpc/server": "^10.29.1",
         "axios": "^1.0.0",
+        "dotenv": "^16.1.4",
         "fastify": "^4.17.0",
+        "mermaid": "~9.1.7",
         "moment": "^2.29.4",
         "pino": "^8.14.1",
         "trpc-openapi": "^1.2.0",
         "tslib": "^2.3.0",
+        "vitepress": "1.0.0-beta.1",
+        "vitepress-plugin-mermaid": "^2.0.10",
+        "vue": "^3.3.4",
         "zod": "^3.21.4"
     }
 }
