feat(server): added missing configurations

--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - PORT=${BACKUP_SERVICE_PORT}
     healthcheck:
       test: wget -qO- http://localhost:${BACKUP_SERVICE_PORT}/health || exit 1
-    image: ${DOCKER_REGISTRY_HOST}/codesdowork/server_backup-service
+    image: ${DOCKER_REGISTRY_HOST}/codesdowork/monorepo-private/server-backup-service
     profiles:
       - backup
     volumes:
@@ -18,38 +18,6 @@ services:
       - git-data:/data/services/git/data:ro
       - navidrome-data:/data/services/navidrome/data:ro
       - postgres-data:/data/services/db/data:ro
-      - sonarqube-config:/data/services/sonarqube/config:ro
-      - sonarqube-data:/data/services/sonarqube/data:ro
-      - sonarqube-extensions:/data/services/sonarqube/extensions:ro
-      - teamcity-data:/data/services/teamcity/data:ro
-
-  backup-service-dev:
-    build:
-      context: ./backup-service
-      dockerfile: Dockerfile.dev
-    container_name: ${BACKUP_SERVICE_CONTAINER}-dev
-    environment:
-      - PORT=${BACKUP_SERVICE_PORT}
-      - HOST=0.0.0.0
-    extra_hosts:
-      - ${VERDACCIO_HOST}:host-gateway
-    healthcheck:
-      test: wget -qO- http://localhost:${BACKUP_SERVICE_PORT}/health || exit 1
-    image: ${DOCKER_REGISTRY_HOST}/codesdowork/server_backup-service-dev
-    ports:
-      - ${BACKUP_SERVICE_PORT}:${BACKUP_SERVICE_PORT}
-    profiles:
-      - backup-dev
-    volumes:
-      - ./backup-service:/app
-      - /app/node_modules
-      - ./backup-service/config/rsnapshot.conf:/etc/rsnapshot.conf
-      - ./backup-service/config/crontabs:/var/spool/cron/crontabs
-      - ./backup-service/.snapshots:/.snapshots
-      - ${BACKUP_PC_PATH}:/data/pc:ro
-      - git-config:/data/services/git/config:ro
-      - git-data:/data/services/git/data:ro
-      - navidrome-data:/data/services/navidrome/data:ro
       - sonarqube-config:/data/services/sonarqube/config:ro
       - sonarqube-data:/data/services/sonarqube/data:ro
       - sonarqube-extensions:/data/services/sonarqube/extensions:ro
@@ -90,35 +58,14 @@ services:
       - docker-registry:/var/lib/registry
 
   documentation:
-    build:
-      context: ./documentation
-      network: host
     container_name: ${DOCUMENTATION_CONTAINER}
     healthcheck:
       test: wget -qO- http://localhost:${DOCUMENTATION_PORT} || exit 1
-    image: ${DOCKER_REGISTRY_HOST}/codesdowork/server_documentation
+    image: ${DOCKER_REGISTRY_HOST}/codesdowork/monorepo-private/server-documentation
     networks:
       - documentation
     profiles:
       - documentation
-
-  documentation-dev:
-    container_name: ${DOCUMENTATION_CONTAINER}-dev
-    # watch.usePolling is needed for updates over networks (e.g. mounts)
-    entrypoint: sh -c "yarn config set strict-ssl false && yarn && yarn start --host 0.0.0.0 --watch.usePolling"
-    extra_hosts:
-      - ${VERDACCIO_HOST}:host-gateway
-    healthcheck:
-      test: wget -qO- http://localhost:4173 || exit 1
-    image: node:19-alpine
-    ports:
-      - 4173:4173
-    profiles:
-      - documentation-dev
-    volumes:
-      - ./documentation:/app
-      - /app/node_modules
-    working_dir: /app
 
   git:
     container_name: ${GIT_CONTAINER}
@@ -146,7 +93,7 @@ services:
       - ./music/.env
     environment:
       - ND_PORT=${MUSIC_PORT}
-    image: ${DOCKER_REGISTRY_HOST}/codesdowork/server_music
+    image: ${DOCKER_REGISTRY_HOST}/codesdowork/monorepo-private/server-music
     networks:
       - music
     profiles:
@@ -166,7 +113,7 @@ services:
     profiles:
       - renovate
     volumes:
-      - ./renovate/config.js:/usr/src/app/config.js
+      - ../../renovate/config.js:/usr/src/app/config.js
 
   renovate-dev:
     container_name: renovate-dev
@@ -180,42 +127,16 @@ services:
     profiles:
       - renovate-dev
     volumes:
-      - ./renovate/config.js:/usr/src/app/config.js
+      - ../../renovate/config.js:/usr/src/app/config.js
 
   reverse-proxy:
-    build:
-      context: ./reverse-proxy
+    build: ./reverse-proxy
     container_name: ${REVERSE_PROXY_CONTAINER}
     env_file:
       - .env
     healthcheck:
       test: curl -f http://localhost || exit 1
-    image: ${DOCKER_REGISTRY_HOST}/codesdowork/server_reverse-proxy
-    networks:
-      - cicd
-      - documentation
-      - music
-    ports:
-      - 80:80
-      - 443:443
-    profiles:
-      - cicd
-      - documentation
-      - git
-      - music
-      - sonar
-      - teamcity
-
-  reverse-proxy-local:
-    build:
-      context: .
-      dockerfile: ./reverse-proxy/Dockerfile.local
-    container_name: ${REVERSE_PROXY_CONTAINER}-local
-    env_file:
-      - .env
-    healthcheck:
-      test: curl -f http://localhost || exit 1
-    image: ${DOCKER_REGISTRY_HOST}/codesdowork/server_reverse-proxy-local
+    image: ${DOCKER_REGISTRY_HOST}/codesdowork/monorepo-private/server-reverse-proxy
     networks:
       - cicd
       - documentation
@@ -248,7 +169,10 @@ services:
       - sonarqube-extensions:/opt/sonarqube/extensions
 
   teamcity-agent:
-    build: ./teamcity-agent
+    build:
+      context: ./teamcity-agent
+      args:
+        - DOCKER_REGISTRY_HOST=${DOCKER_REGISTRY_HOST}
     container_name: ${TEAMCITY_AGENT_CONTAINER}
     environment:
       - SERVER_URL=${TEAMCITY_CONTAINER}:${TEAMCITY_PORT}
@@ -256,30 +180,7 @@ services:
     extra_hosts:
       - ${VERDACCIO_HOST}:host-gateway
       - ${DOCKER_REGISTRY_HOST}:host-gateway
-    image: ${DOCKER_REGISTRY_HOST}/codesdowork/server_teamcity-agent
-    networks:
-      - cicd
-    privileged: true
-    profiles:
-      - teamcity
-      - cicd
-    volumes:
-      - teamcity-agent-volumes:/var/lib/docker
-
-  teamcity-agent-local:
-    build:
-      context: .
-      dockerfile: teamcity-agent/Dockerfile.local
-      args:
-        - DOCKER_REGISTRY_HOST=${DOCKER_REGISTRY_HOST}
-    container_name: ${TEAMCITY_AGENT_CONTAINER}-local
-    environment:
-      - SERVER_URL=${TEAMCITY_CONTAINER}:${TEAMCITY_PORT}
-      - DOCKER_IN_DOCKER=start
-    extra_hosts:
-      - ${VERDACCIO_HOST}:host-gateway
-      - ${DOCKER_REGISTRY_HOST}:host-gateway
-    image: ${DOCKER_REGISTRY_HOST}/codesdowork/server_teamcity-agent-local
+    image: ${DOCKER_REGISTRY_HOST}/codesdowork/monorepo-private/server-teamcity-agent
     networks:
       - cicd
     privileged: true
