--- a/apps/dashboard/project.json
+++ b/apps/dashboard/project.json
@@ -1,7 +1,7 @@
 {
     "name": "dashboard",
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
-    "projectType": "external",
+    "projectType": "application",
     "targets": {
         "dev": {
             "executor": "nx:run-commands",
