--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -2,6 +2,9 @@ BACKUP_PC_PATH=/backup-pc-data
 BACKUP_SERVICE_CONTAINER=backup-service
 BACKUP_SERVICE_PORT=5555
 
+DASHBOARD_CONTAINER=dashboard
+DASHBOARD_PORT=80
+
 DB_CONTAINER=db
 DB_DEFAULT_DB_NAME=postgres
 DB_PASSWORD=password
