--- a/apps/server/music/Dockerfile
+++ b/apps/server/music/Dockerfile
@@ -1,3 +1,7 @@
+FROM codesdowork/monorepo-private/base AS base
+FROM codesdowork/monorepo-private/workspace AS workspace
+
+
 FROM deluan/navidrome:latest
 
 RUN adduser --disabled-password navidrome
