--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -24,6 +24,9 @@ MUSIC_CONTAINER=music
 MUSIC_PORT=4533
 MUSIC_VOLUME=/music
 
+MUSIC_DOWNLOADER_CONTAINER=music-downloader
+MUSIC_DOWNLOADER_PORT=4534
+
 RENOVATE_TOKEN=token
 
 REVERSE_PROXY_CONTAINER=reverse-proxy
