--- a/package.json
+++ b/package.json
@@ -32,30 +32,31 @@
         "check": "pnpm run format:check && pnpm run lint && pnpm run test && pnpm run build"
     },
     "devDependencies": {
-        "@codesdowork/nx-containers": "^0.5.0",
-        "@nx/esbuild": "16.2.2",
-        "@nx/eslint-plugin": "16.2.2",
-        "@nx/jest": "16.2.2",
-        "@nx/js": "16.2.2",
-        "@nx/linter": "16.2.2",
-        "@nx/node": "16.2.2",
-        "@nx/workspace": "16.2.2",
+        "@codesdowork/nx-containers": "^0.5.2",
+        "@nx/esbuild": "16.3.2",
+        "@nx/eslint-plugin": "16.3.2",
+        "@nx/jest": "16.3.2",
+        "@nx/js": "16.3.2",
+        "@nx/linter": "16.3.2",
+        "@nx/node": "16.3.2",
+        "@nx/workspace": "16.3.2",
         "@types/jest": "^29.4.0",
         "@types/node": "~18.7.1",
-        "@typescript-eslint/eslint-plugin": "^5.58.0",
-        "@typescript-eslint/parser": "^5.58.0",
-        "esbuild": "^0.17.17",
+        "@types/node-cron": "^3.0.7",
+        "@typescript-eslint/eslint-plugin": "5.58.0",
+        "@typescript-eslint/parser": "5.58.0",
+        "esbuild": "0.17.17",
         "eslint": "~8.15.0",
         "eslint-config-prettier": "8.1.0",
         "eslint-plugin-prettier": "^4.2.1",
         "jest": "^29.4.1",
         "jest-environment-node": "^29.4.1",
-        "nx": "16.2.2",
+        "nx": "16.3.2",
         "pino-pretty": "^10.0.0",
         "prettier": "^2.8.8",
-        "ts-jest": "^29.1.0",
+        "ts-jest": "29.1.0",
         "ts-node": "10.9.1",
-        "typescript": "~5.0.2"
+        "typescript": "5.0.4"
     },
     "dependencies": {
         "@fastify/websocket": "^8.1.0",
@@ -66,8 +67,8 @@
         "fastify": "^4.17.0",
         "mermaid": "~9.1.7",
         "moment": "^2.29.4",
+        "node-cron": "^3.0.2",
         "pino": "^8.14.1",
-        "trpc-openapi": "^1.2.0",
         "tslib": "^2.3.0",
         "vitepress": "1.0.0-beta.1",
         "vitepress-plugin-mermaid": "^2.0.10",
