--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,17 +10,26 @@
         "importHelpers": true,
         "target": "es2015",
         "module": "esnext",
-        "lib": ["es2020", "dom"],
+        "lib": ["es2017", "dom"],
         "skipLibCheck": true,
         "skipDefaultLibCheck": true,
+        "esModuleInterop": true,
         "baseUrl": ".",
         "paths": {
             "server/backup-service/snapshots": [
                 "libs/server/backup-service/snapshots/src/index.ts"
             ],
+            "server/music-downloader/downloader": [
+                "libs/server/music-downloader/downloader/src/index.ts"
+            ],
+            "server/music-downloader/scheduler": [
+                "libs/server/music-downloader/scheduler/src/index.ts"
+            ],
+            "shared/fastify": ["libs/shared/fastify/src/index.ts"],
             "shared/health": ["libs/shared/health/src/index.ts"],
             "shared/logging": ["libs/shared/logging/src/index.ts"],
-            "shared/trpc": ["libs/shared/trpc/src/index.ts"]
+            "shared/trpc": ["libs/shared/trpc/src/index.ts"],
+            "shared/utils": ["libs/shared/utils/src/index.ts"]
         }
     },
     "exclude": ["node_modules", "tmp"]
