feat(server): added commands for building and running images

--- a/apps/dashboard/public/conf.yml
+++ b/apps/dashboard/public/conf.yml
@@ -125,6 +125,9 @@ sections:
         tags:
           - navidrome
         url: https://music.localhost/
+      - title: Music Downloader
+        icon: server/icon.svg
+        url: https://music-downloader.localhost/
       - title: SonarQube
         icon: server/sonarqube.png
         tags:
