--- a/apps/server/backup-service/project.json
+++ b/apps/server/backup-service/project.json
@@ -71,6 +71,15 @@
                     "codeCoverage": true
                 }
             }
+        },
+        "build-image": {
+            "executor": "@codesdowork/nx-containers:build"
+        },
+        "run-image": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "docker compose -f apps/server/docker-compose.yml up -d backup-service"
+            }
         }
     },
     "tags": ["server/backup-service"]
