--- a/apps/dashboard/project.json
+++ b/apps/dashboard/project.json
@@ -28,6 +28,12 @@
         },
         "build-image": {
             "executor": "@codesdowork/nx-containers:build"
+        },
+        "run-image": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "docker compose -f apps/dashboard/docker-compose.yml up -d dashboard"
+            }
         }
     },
     "tags": ["dashboard"]
