--- a/apps/server/documentation/project.json
+++ b/apps/server/documentation/project.json
@@ -46,6 +46,12 @@
         },
         "build-image": {
             "executor": "@codesdowork/nx-containers:build"
+        },
+        "run-image": {
+            "executor": "nx:run-commands",
+            "options": {
+                "command": "docker compose -f apps/server/docker-compose.yml up -d documentation"
+            }
         }
     },
     "tags": []
