--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,8 @@
         "skipDefaultLibCheck": true,
         "esModuleInterop": true,
         "baseUrl": ".",
+        "strict": true,
+        "strictNullChecks": true,
         "paths": {
             "server/backup-service/snapshots": [
                 "libs/server/backup-service/snapshots/src/index.ts"
