feat(scoreboard): added nextjs scoreboard app to server

--- a/nx.json
+++ b/nx.json
@@ -21,6 +21,9 @@
         },
         "lint": {
             "inputs": ["default", "{workspaceRoot}/.eslintrc.json", "{workspaceRoot}/.eslintignore"]
+        },
+        "e2e": {
+            "inputs": ["default", "^production"]
         }
     },
     "namedInputs": {
@@ -33,5 +36,18 @@
             "!{projectRoot}/.eslintrc.json"
         ],
         "sharedGlobals": []
+    },
+    "generators": {
+        "@nx/react": {
+            "application": {
+                "babel": true
+            }
+        },
+        "@nx/next": {
+            "application": {
+                "style": "none",
+                "linter": "eslint"
+            }
+        }
     }
 }
