--- a/package.json
+++ b/package.json
@@ -33,27 +33,45 @@
     },
     "devDependencies": {
         "@codesdowork/nx-containers": "^0.6.3",
+        "@nx/cypress": "16.5.4",
         "@nx/esbuild": "16.3.2",
         "@nx/eslint-plugin": "16.3.2",
         "@nx/jest": "16.3.2",
-        "@nx/js": "16.3.2",
+        "@nx/js": "16.5.4",
         "@nx/linter": "16.3.2",
+        "@nx/next": "^16.5.4",
         "@nx/node": "16.3.2",
+        "@nx/react": "16.5.4",
         "@nx/workspace": "16.3.2",
+        "@testing-library/react": "14.0.0",
         "@types/jest": "^29.4.0",
-        "@types/node": "~18.7.1",
+        "@types/node": "18.14.2",
         "@types/node-cron": "^3.0.7",
+        "@types/react": "18.2.14",
+        "@types/react-dom": "18.2.6",
         "@typescript-eslint/eslint-plugin": "5.58.0",
         "@typescript-eslint/parser": "5.58.0",
+        "autoprefixer": "^10.4.14",
+        "babel-jest": "^29.4.1",
+        "cypress": "^12.16.0",
         "esbuild": "0.17.17",
         "eslint": "~8.15.0",
+        "eslint-config-next": "13.4.1",
         "eslint-config-prettier": "8.1.0",
+        "eslint-plugin-cypress": "^2.10.3",
+        "eslint-plugin-import": "2.27.5",
+        "eslint-plugin-jsx-a11y": "6.7.1",
         "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "7.32.2",
+        "eslint-plugin-react-hooks": "4.6.0",
         "jest": "^29.4.1",
+        "jest-environment-jsdom": "^29.4.1",
         "jest-environment-node": "^29.4.1",
         "nx": "16.3.2",
         "pino-pretty": "^10.0.0",
+        "postcss": "^8.4.27",
         "prettier": "^2.8.8",
+        "tailwindcss": "^3.3.3",
         "ts-jest": "29.1.0",
         "ts-node": "10.9.1",
         "typescript": "5.0.4"
@@ -70,8 +88,11 @@
         "fastify": "^4.17.0",
         "mermaid": "~9.1.7",
         "moment": "^2.29.4",
+        "next": "13.4.1",
         "node-cron": "^3.0.2",
         "pino": "^8.14.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
         "trpc-openapi": "^1.2.0",
         "tslib": "^2.3.0",
         "vitepress": "1.0.0-beta.1",
