--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
         "@nx/node": "16.3.2",
         "@nx/react": "16.5.4",
         "@nx/workspace": "16.3.2",
+        "@swc/cli": "~0.1.62",
+        "@swc/core": "~1.3.51",
         "@testing-library/react": "14.0.0",
         "@types/jest": "^29.4.0",
         "@types/node": "18.14.2",
@@ -81,9 +83,11 @@
         "@fastify/swagger-ui": "^1.9.2",
         "@fastify/websocket": "^8.1.0",
         "@mermaid-js/mermaid-mindmap": "^9.3.0",
+        "@swc/helpers": "~0.5.0",
         "@t3-oss/env-core": "^0.6.0",
         "@trpc/server": "^10.30.0",
         "axios": "^1.0.0",
+        "clsx": "^2.0.0",
         "dotenv": "^16.1.4",
         "fastify": "^4.17.0",
         "mermaid": "~9.1.7",
