feat(server): added auth service

--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -1,9 +1,19 @@
+AUTH_CONTAINER=auth
+AUTH_WORKER_CONTAINER=auth-worker
+AUTH_DB=authentik
+AUTH_IMAGE=ghcr.io/goauthentik/server:2023.6.1
+AUTH_PORT=9000
+AUTH_SECRET_KEY=key
+
 BACKUP_PC_PATH=/backup-pc-data
 BACKUP_SERVICE_CONTAINER=backup-service
 BACKUP_SERVICE_PORT=5555
 
 DASHBOARD_CONTAINER=dashboard
 DASHBOARD_PORT=80
+
+CACHE_CONTAINER=cache
+CACHE_PORT=6379
 
 DB_CONTAINER=db
 DB_DEFAULT_DB_NAME=postgres
