--- a/apps/server/reverse-proxy/conf/proxy-headers.conf
+++ b/apps/server/reverse-proxy/conf/proxy-headers.conf
@@ -1,6 +1,14 @@
+# Upgrade WebSocket if requested, otherwise use keepalive
+map $http_upgrade $connection_upgrade_keepalive {
+    default upgrade;
+    ''      '';
+}
+
 proxy_set_header Host $host;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header X-Forwarded-Proto $scheme;
 proxy_set_header X-Forwarded-Protocol $scheme;
 proxy_set_header X-Forwarded-Host $http_host;
+proxy_set_header Upgrade $http_upgrade;
+proxy_set_header Connection $connection_upgrade_keepalive;
