--- a/container.config.json
+++ b/container.config.json
@@ -5,5 +5,6 @@
     "registry": "dockerreg.localhost",
     "workspaceExtensions": {
         "preInstall": ["RUN apk add git", "RUN npm i -g pnpm"]
-    }
+    },
+    "workspaceBuildArgs": "--network host"
 }
