--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "check": "pnpm run format:check && pnpm run lint && pnpm run test && pnpm run build"
     },
     "devDependencies": {
-        "@codesdowork/nx-containers": "^0.6.3",
+        "@codesdowork/nx-containers": "^0.6.5",
         "@nx/cypress": "16.5.4",
         "@nx/esbuild": "16.3.2",
         "@nx/eslint-plugin": "16.3.2",
@@ -83,6 +83,7 @@
         "@fastify/swagger-ui": "^1.9.2",
         "@fastify/websocket": "^8.1.0",
         "@mermaid-js/mermaid-mindmap": "^9.3.0",
+        "@notionhq/client": "^2.2.8",
         "@swc/helpers": "~0.5.0",
         "@t3-oss/env-core": "^0.6.0",
         "@trpc/server": "^10.30.0",
