--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
         "mermaid": "~9.1.7",
         "moment": "^2.29.4",
         "next": "13.4.1",
+        "next-auth": "^4.22.3",
         "node-cron": "^3.0.2",
         "pino": "^8.14.1",
         "react": "18.2.0",
