--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
         "pino": "^8.14.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-icons": "^4.10.1",
         "trpc-openapi": "^1.2.0",
         "tslib": "^2.3.0",
         "vitepress": "1.0.0-beta.1",
