--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -43,6 +43,9 @@ REVERSE_PROXY_CONTAINER=reverse-proxy
 REVERSE_PROXY_HOST=localhost
 REVERSE_PROXY_RESOLVER="127.0.0.11 valid=30s"
 
+SCOREBOARD_CONTAINER=scoreboard
+SCOREBOARD_PORT=4500
+
 SONARQUBE_CONTAINER=sonarqube
 SONARQUBE_PORT=9000
 
