--- a/apps/server/reverse-proxy/templates/server.conf.template
+++ b/apps/server/reverse-proxy/templates/server.conf.template
@@ -90,6 +90,17 @@ server {
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
+    server_name scoreboard.${REVERSE_PROXY_HOST};
+
+    location / {
+		set $upstream ${SCOREBOARD_CONTAINER}:${SCOREBOARD_PORT};
+        proxy_pass http://$upstream;
+	}
+}
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
     server_name sonar.ci.${REVERSE_PROXY_HOST};
 
     location / {
