--- a/package.json
+++ b/package.json
@@ -86,20 +86,26 @@
         "@notionhq/client": "^2.2.8",
         "@swc/helpers": "~0.5.0",
         "@t3-oss/env-core": "^0.6.0",
-        "@trpc/server": "^10.30.0",
+        "@trpc/client": "^10.35.0",
+        "@trpc/next": "^10.35.0",
+        "@trpc/server": "^10.35.0",
         "axios": "^1.0.0",
         "clsx": "^2.0.0",
         "dotenv": "^16.1.4",
+        "encoding": "^0.1.13",
         "fastify": "^4.17.0",
         "mermaid": "~9.1.7",
         "moment": "^2.29.4",
         "next": "13.4.1",
         "next-auth": "^4.22.3",
         "node-cron": "^3.0.2",
+        "pg": "^8.11.1",
+        "pg-hstore": "^2.3.4",
         "pino": "^8.14.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.10.1",
+        "sequelize": "^6.32.1",
         "trpc-openapi": "^1.2.0",
         "tslib": "^2.3.0",
         "vitepress": "1.0.0-beta.1",
