--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -30,6 +30,7 @@
             "shared/fastify": ["libs/shared/fastify/src/index.ts"],
             "shared/health": ["libs/shared/health/src/index.ts"],
             "shared/logging": ["libs/shared/logging/src/index.ts"],
+            "shared/node/crypto": ["libs/shared/node/crypto/src/index.ts"],
             "shared/trpc": ["libs/shared/trpc/src/index.ts"],
             "shared/utils": ["libs/shared/utils/src/index.ts"],
             "shared/web/components": ["libs/shared/web/components/src/index.ts"],
