--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@types/jest": "^29.4.0",
         "@types/node": "18.14.2",
         "@types/node-cron": "^3.0.7",
+        "@types/pg": "^8.10.2",
         "@types/react": "18.2.14",
         "@types/react-dom": "18.2.6",
         "@typescript-eslint/eslint-plugin": "5.58.0",
@@ -86,6 +87,7 @@
         "@notionhq/client": "^2.2.8",
         "@swc/helpers": "~0.5.0",
         "@t3-oss/env-core": "^0.6.0",
+        "@tailwindcss/forms": "^0.5.4",
         "@trpc/client": "^10.35.0",
         "@trpc/next": "^10.35.0",
         "@trpc/server": "^10.35.0",
