--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "@swc/cli": "~0.1.62",
         "@swc/core": "~1.3.51",
         "@testing-library/react": "14.0.0",
+        "@types/d3": "^7.4.0",
         "@types/jest": "^29.4.0",
         "@types/node": "18.14.2",
         "@types/node-cron": "^3.0.7",
@@ -93,6 +94,7 @@
         "@trpc/server": "^10.35.0",
         "axios": "^1.0.0",
         "clsx": "^2.0.0",
+        "d3": "^7.8.5",
         "dotenv": "^16.1.4",
         "encoding": "^0.1.13",
         "fastify": "^4.17.0",
@@ -110,6 +112,7 @@
         "sequelize": "^6.32.1",
         "trpc-openapi": "^1.2.0",
         "tslib": "^2.3.0",
+        "usehooks-ts": "^2.9.1",
         "vitepress": "1.0.0-beta.1",
         "vitepress-plugin-mermaid": "^2.0.10",
         "vue": "^3.3.4",
