--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -34,9 +34,7 @@
             "shared/trpc": ["libs/shared/trpc/src/index.ts"],
             "shared/utils": ["libs/shared/utils/src/index.ts"],
             "shared/web/components": ["libs/shared/web/components/src/index.ts"],
-            "shared/web/components/server": ["libs/shared/web/components/src/server.ts"],
-            "shared/web/utils": ["libs/shared/web/utils/src/index.ts"],
-            "shared/web/utils/server": ["libs/shared/web/utils/src/server.ts"]
+            "shared/web/utils": ["libs/shared/web/utils/src/index.ts"]
         }
     },
     "exclude": ["node_modules", "tmp"]
