feat(server-nutrition): added nutrition-dev to server

--- a/apps/server/docker-compose.yml
+++ b/apps/server/docker-compose.yml
@@ -72,6 +72,7 @@ services:
     image: docker.io/library/redis:alpine
     networks:
       - auth
+      - nutrition
     volumes:
       - cache:/data
 
@@ -82,13 +83,15 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_USER=${DB_USER}
     healthcheck:
-      test: pg_isready -U postgres
+      test: pg_isready -U $DB_USER
     image: postgres:15-alpine
     networks:
       - auth
       - cicd
       - git
+      - nutrition
       - scoreboard
+      - sonar
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
@@ -154,6 +157,35 @@ services:
       - music-downloader-data:/app/.data
       - ${MUSIC_VOLUME}:/music
 
+  nutrition-dev:
+    container_name: ${NUTRITION_CONTAINER}
+    depends_on:
+      cache:
+        condition: service_healthy
+      db:
+        condition: service_healthy
+    environment:
+      - KEY=${NUTRITION_KEY}
+      - SECRET=${NUTRITION_SECRET}
+      - DB_CLIENT=pg
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_DATABASE=nutrition
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - CACHE_ENABLED=true
+      - CACHE_STORE=redis
+      - REDIS=redis://cache:6379
+      - EXTENSIONS_AUTO_RELOAD=true
+    image: directus/directus:10
+    networks:
+      - nutrition
+    ports:
+      - 8055:8055
+    volumes:
+      - ../../dist/libs/server/nutrition/extensions:/directus/extensions
+      - nutrition-uploads:/directus/uploads
+
   renovate:
     container_name: renovate
     environment:
@@ -197,6 +229,9 @@ services:
 
   scoreboard:
     container_name: ${SCOREBOARD_CONTAINER}
+    depends_on:
+      db:
+        condition: service_healthy
     environment:
       - PORT=${SCOREBOARD_PORT}
       - PG_PASSWORD=${DB_PASSWORD}
@@ -226,6 +261,7 @@ services:
     image: sonarqube:9-community
     networks:
       - cicd
+      - sonar
     volumes:
       - sonarqube-config:/opt/sonarqube/conf
       - sonarqube-data:/opt/sonarqube/data
@@ -295,6 +331,8 @@ volumes:
 
   navidrome-data:
 
+  nutrition-uploads:
+
   postgres-data:
 
   sonarqube-config:
@@ -321,5 +359,9 @@ networks:
     driver: bridge
   music:
     driver: bridge
+  nutrition:
+    driver: bridge
   scoreboard:
+    driver: bridge
+  sonar:
     driver: bridge
