--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -37,6 +37,11 @@ MUSIC_VOLUME=/music
 MUSIC_DOWNLOADER_CONTAINER=music-downloader
 MUSIC_DOWNLOADER_PORT=4534
 
+NUTRITION_CONTAINER=nutrition
+NUTRITION_KEY=key
+NUTRITION_PORT=8055
+NUTRITION_SECRET=secret
+
 RENOVATE_TOKEN=token
 
 REVERSE_PROXY_CONTAINER=reverse-proxy
