--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     },
     "devDependencies": {
         "@codesdowork/nx-containers": "^0.6.5",
+        "@directus/extensions-sdk": "^10.1.9",
         "@nx/cypress": "16.5.4",
         "@nx/esbuild": "16.3.2",
         "@nx/eslint-plugin": "16.3.2",
