--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,19 @@
 {
     "root": true,
-    "ignorePatterns": ["**/*"],
-    "plugins": ["@nx"],
+    "ignorePatterns": [
+        "**/*"
+    ],
+    "plugins": [
+        "@nx"
+    ],
     "overrides": [
         {
-            "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
+            "files": [
+                "*.ts",
+                "*.tsx",
+                "*.js",
+                "*.jsx"
+            ],
             "rules": {
                 "@nx/enforce-module-boundaries": [
                     "error",
@@ -14,19 +23,41 @@
                         "depConstraints": [
                             {
                                 "sourceTag": "shared",
-                                "onlyDependOnLibsWithTags": ["shared"]
+                                "onlyDependOnLibsWithTags": [
+                                    "shared"
+                                ]
                             },
                             {
                                 "sourceTag": "server/backup-service",
-                                "onlyDependOnLibsWithTags": ["shared", "server/backup-service"]
+                                "onlyDependOnLibsWithTags": [
+                                    "shared",
+                                    "router",
+                                    "server/backup-service"
+                                ]
                             },
                             {
                                 "sourceTag": "server/music-downloader",
-                                "onlyDependOnLibsWithTags": ["shared", "server/music-downloader"]
+                                "onlyDependOnLibsWithTags": [
+                                    "shared",
+                                    "router",
+                                    "server/music-downloader"
+                                ]
                             },
                             {
                                 "sourceTag": "server/scoreboard",
-                                "onlyDependOnLibsWithTags": ["shared"]
+                                "onlyDependOnLibsWithTags": [
+                                    "shared",
+                                    "router",
+                                    "server/scoreboard"
+                                ]
+                            },
+                            {
+                                "sourceTag": "server/nutrition",
+                                "onlyDependOnLibsWithTags": [
+                                    "shared",
+                                    "router",
+                                    "server/nutrition"
+                                ]
                             }
                         ]
                     }
@@ -34,17 +65,32 @@
             }
         },
         {
-            "files": ["*.ts", "*.tsx"],
-            "extends": ["plugin:@nx/typescript"],
+            "files": [
+                "*.ts",
+                "*.tsx"
+            ],
+            "extends": [
+                "plugin:@nx/typescript"
+            ],
             "rules": {}
         },
         {
-            "files": ["*.js", "*.jsx"],
-            "extends": ["plugin:@nx/javascript"],
+            "files": [
+                "*.js",
+                "*.jsx"
+            ],
+            "extends": [
+                "plugin:@nx/javascript"
+            ],
             "rules": {}
         },
         {
-            "files": ["*.spec.ts", "*.spec.tsx", "*.spec.js", "*.spec.jsx"],
+            "files": [
+                "*.spec.ts",
+                "*.spec.tsx",
+                "*.spec.js",
+                "*.spec.jsx"
+            ],
             "env": {
                 "jest": true
             },
