--- a/libs/server/nutrition/extensions-bundle/project.json
+++ b/libs/server/nutrition/extensions-bundle/project.json
@@ -1,7 +1,7 @@
 {
-    "name": "server-nutrition-analytics",
+    "name": "server-nutrition-extensions-bundle",
     "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-    "sourceRoot": "libs/server/nutrition/analytics/src",
+    "sourceRoot": "libs/server/nutrition/extensions-bundle/src",
     "projectType": "library",
     "targets": {
         "build": {
@@ -16,18 +16,24 @@
                 "script": "dev"
             }
         },
+        "add": {
+            "executor": "nx:run-script",
+            "options": {
+                "script": "add"
+            }
+        },
         "lint": {
             "executor": "@nx/linter:eslint",
             "outputs": ["{options.outputFile}"],
             "options": {
-                "lintFilePatterns": ["libs/server/nutrition/analytics/**/*.ts"]
+                "lintFilePatterns": ["libs/server/nutrition/extensions-bundle/**/*.ts"]
             }
         },
         "test": {
             "executor": "@nx/jest:jest",
             "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
             "options": {
-                "jestConfig": "libs/server/nutrition/analytics/jest.config.ts",
+                "jestConfig": "libs/server/nutrition/extensions-bundle/jest.config.ts",
                 "passWithNoTests": true
             },
             "configurations": {
