--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "devDependencies": {
         "@codesdowork/nx-containers": "^0.6.5",
         "@directus/extensions-sdk": "^10.1.9",
+        "@directus/types": "^10.1.5",
         "@nx/cypress": "16.5.4",
         "@nx/esbuild": "16.3.2",
         "@nx/eslint-plugin": "16.3.2",
@@ -58,6 +59,7 @@
         "@typescript-eslint/parser": "5.58.0",
         "autoprefixer": "^10.4.14",
         "babel-jest": "^29.4.1",
+        "copyfiles": "^2.4.1",
         "cypress": "^12.16.0",
         "esbuild": "0.17.17",
         "eslint": "~8.15.0",
@@ -76,6 +78,7 @@
         "pino-pretty": "^10.0.0",
         "postcss": "^8.4.27",
         "prettier": "^2.8.8",
+        "replace-in-files-cli": "^2.2.0",
         "tailwindcss": "^3.3.3",
         "ts-jest": "29.1.0",
         "ts-node": "10.9.1",
