feat(server scripts): added energy saver scripts

--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -79,7 +79,7 @@ server {
     server_name $domain $tunnel_domain;
 
     access_by_lua_block {
-        if not ngx.re.find(ngx.var.request_uri, "^/(auth|v2|gitlab|portainer|music/rest|scoreboard|sonar|npm)") then
+        if not ngx.re.find(ngx.var.request_uri, "^/(auth|v2|gitlab|portainer|music/rest|scoreboard|sonar|ssh|npm)") then
             local host_or_tunnel
             if ngx.var.http_host == ngx.var.nginx_container then
                 host_or_tunnel = ngx.var.tunnel_domain
